--- a/index.html
+++ b/index.html
@@ -57,11 +57,13 @@
   </section>
 
   <!-- Lookbook -->
+  <!-- Lookbook -->
+  <!-- Lookbook -->
   <section id="lookbook" class="py-40 bg-stone-950 px-8">
     <h2 class="text-center text-sm tracking-[0.4em] uppercase text-stone-400 mb-20">Lookbook</h2>
     <div class="grid grid-cols-1 md:grid-cols-2 gap-10 max-w-6xl mx-auto">
-      <div class="h-[520px] bg-stone-800"></div>
-      <div class="h-[520px] bg-stone-800"></div>
+      <img src="https://images.unsplash.com/photo-1520975916090-3105956dac38?auto=format&fit=crop&w=1200&q=80" alt="ROIS lookbook black beanie" class="w-full h-[520px] object-cover block" />
+      <img src="https://images.unsplash.com/photo-1512436991641-6745cdb1723f?auto=format&fit=crop&w=1200&q=80" alt="ROIS lookbook red beanie" class="w-full h-[520px] object-cover block" />
     </div>
   </section>
 
