Update lookbook section layout and image sizes

--- a/index.html
+++ b/index.html
@@ -61,9 +61,13 @@
   <!-- Lookbook -->
   <section id="lookbook" class="py-40 bg-stone-950 px-8">
     <h2 class="text-center text-sm tracking-[0.4em] uppercase text-stone-400 mb-20">Lookbook</h2>
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-10 max-w-5xl mx-auto">
-      <img src="https://i.imgur.com/2UBf1pS.jpg" alt="ROIS lookbook beanie" class="w-full h-[380px] object-cover block" />
-      <img src="https://i.imgur.com/avV7ISX.png" alt="ROIS lookbook beanie" class="w-full h-[380px] object-cover block" />
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-14 max-w-7xl mx-auto">
+      <div class="w-full h-[520px] bg-black">
+        <img src="https://i.imgur.com/2UBf1pS.jpg" alt="ROIS lookbook beanie" class="w-full h-full object-contain block" />
+      </div>
+      <div class="w-full h-[520px] bg-black">
+        <img src="https://i.imgur.com/avV7ISX.png" alt="ROIS lookbook beanie" class="w-full h-full object-contain block" />
+      </div>
     </div>
   </section>
 
