Update product images and descriptions in collection

--- a/index.html
+++ b/index.html
@@ -38,21 +38,34 @@
   <section id="collection" class="py-40 px-8 max-w-7xl mx-auto">
     <h2 class="text-sm tracking-[0.4em] uppercase text-stone-400 mb-16">Collection 01</h2>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-16">
+
+      <!-- Graphic Tee: Foundation -->
       <div class="group">
-        <div class="h-[420px] bg-stone-800 mb-6"></div>
-        <p class="text-sm tracking-wide">Graphic Tee 01</p>
-        <p class="text-xs text-stone-500 mt-2">Cut for daily wear</p>
+        <div class="h-[420px] bg-black mb-6 flex items-center justify-center">
+          <img src="https://i.imgur.com/2UBf1pS.jpg" alt="ROIS Foundation Tee" class="w-full h-full object-contain" />
+        </div>
+        <p class="text-sm tracking-wide">Foundation Tee</p>
+        <p class="text-xs text-stone-500 mt-2">Left chest print · white ink</p>
       </div>
+
+      <!-- Graphic Tee: Void//001 -->
       <div class="group">
-        <div class="h-[420px] bg-stone-800 mb-6"></div>
-        <p class="text-sm tracking-wide">Graphic Tee 02</p>
-        <p class="text-xs text-stone-500 mt-2">Minimal graphic form</p>
+        <div class="h-[420px] bg-black mb-6 flex items-center justify-center">
+          <img src="https://i.imgur.com/avV7ISX.png" alt="ROIS Void 001 Tee" class="w-full h-full object-contain" />
+        </div>
+        <p class="text-sm tracking-wide">Void//001 Tee</p>
+        <p class="text-xs text-stone-500 mt-2">Back graphic · red accent</p>
       </div>
+
+      <!-- Beanie: Raw//002 -->
       <div class="group">
-        <div class="h-[420px] bg-stone-800 mb-6"></div>
-        <p class="text-sm tracking-wide">Beanie 01</p>
-        <p class="text-xs text-stone-500 mt-2">Cold-season essential</p>
+        <div class="h-[420px] bg-black mb-6 flex items-center justify-center">
+          <img src="https://i.imgur.com/TdUxtqS.jpeg" alt="ROIS Raw 002 Beanie" class="w-full h-full object-contain" />
+        </div>
+        <p class="text-sm tracking-wide">Raw//002 Beanie</p>
+        <p class="text-xs text-stone-500 mt-2">Sunflower yellow embroidery</p>
       </div>
+
     </div>
   </section>
 
