Update product images in index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <!-- Graphic Tee: Foundation -->
       <div class="group">
         <div class="h-[420px] bg-black mb-6 flex items-center justify-center">
-          <img src="https://i.imgur.com/2UBf1pS.jpg" alt="ROIS Foundation Tee" class="w-full h-full object-contain" />
+          <img src="https://i.imgur.com/UqjFMfN.jpeg" alt="ROIS Foundation Tee" class="w-full h-full object-contain" />
         </div>
         <p class="text-sm tracking-wide">Foundation Tee</p>
         <p class="text-xs text-stone-500 mt-2">Left chest print · white ink</p>
@@ -51,7 +51,7 @@
       <!-- Graphic Tee: Void//001 -->
       <div class="group">
         <div class="h-[420px] bg-black mb-6 flex items-center justify-center">
-          <img src="https://i.imgur.com/avV7ISX.png" alt="ROIS Void 001 Tee" class="w-full h-full object-contain" />
+          <img src="https://i.imgur.com/V0u0jqM.jpeg" alt="ROIS Void 001 Tee" class="w-full h-full object-contain" />
         </div>
         <p class="text-sm tracking-wide">Void//001 Tee</p>
         <p class="text-xs text-stone-500 mt-2">Back graphic · red accent</p>
@@ -76,10 +76,10 @@
     <h2 class="text-center text-sm tracking-[0.4em] uppercase text-stone-400 mb-20">Lookbook</h2>
     <div class="grid grid-cols-1 md:grid-cols-2 gap-14 max-w-7xl mx-auto">
       <div class="w-full h-[520px] bg-black">
-        <img src="https://i.imgur.com/2UBf1pS.jpg" alt="ROIS lookbook beanie" class="w-full h-full object-contain block" />
+        <img src="https://i.imgur.com/UqjFMfN.jpeg" alt="ROIS lookbook Foundation Tee" class="w-full h-full object-contain block" />
       </div>
       <div class="w-full h-[520px] bg-black">
-        <img src="https://i.imgur.com/avV7ISX.png" alt="ROIS lookbook beanie" class="w-full h-full object-contain block" />
+        <img src="https://i.imgur.com/V0u0jqM.jpeg" alt="ROIS lookbook beanie" class="w-full h-full object-contain block" />
       </div>
     </div>
   </section>
