--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
   <!-- Lookbook -->
   <section id="lookbook" class="py-40 bg-stone-950 px-8">
     <h2 class="text-center text-sm tracking-[0.4em] uppercase text-stone-400 mb-20">Lookbook</h2>
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-14 max-w-7xl mx-auto">
-      <div class="w-full h-[520px] bg-black">
-        <img src="https://i.imgur.com/2UBf1pS.jpg" alt="ROIS lookbook model beanie" class="w-full h-full object-cover block" />
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-20 max-w-7xl mx-auto">
+      <div class="w-full h-[700px] bg-black flex items-center justify-center">
+        <img src="https://i.imgur.com/2UBf1pS.jpg" alt="ROIS lookbook model beanie" class="w-full h-full object-contain block" />
       </div>
-      <div class="w-full h-[520px] bg-black">
-        <img src="https://i.imgur.com/avV7ISX.png" alt="ROIS lookbook model streetwear" class="w-full h-full object-cover block" />
+      <div class="w-full h-[700px] bg-black flex items-center justify-center">
+        <img src="https://i.imgur.com/avV7ISX.png" alt="ROIS lookbook model streetwear" class="w-full h-full object-contain block" />
       </div>
     </div>
   </section>
