Enhance collection section with subtabs and heading
Updated the heading and added collection subtabs for better organization.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,17 @@
 
   <!-- Collection -->
   <section id="collection" class="py-40 px-8 max-w-7xl mx-auto">
-    <h2 class="text-sm tracking-[0.4em] uppercase text-stone-400 mb-16">Collection 01</h2>
+    <h2 class="text-sm tracking-[0.4em] uppercase text-stone-400 mb-6">Collection 01</h2>
+
+    <!-- Collection Subtabs -->
+    <div class="flex flex-wrap gap-10 mb-16 text-xs tracking-[0.35em] uppercase">
+      <button class="text-stone-400 hover:text-red-600 transition">VOID//001</button>
+      <button class="text-stone-400 hover:text-red-600 transition">RAW//002</button>
+      <button class="text-stone-400 hover:text-red-600 transition">STATIC//003</button>
+      <button class="text-stone-400 hover:text-red-600 transition">BLUNT//004</button>
+    </div>
+
+    <h2 class="hidden">-[0.4em] uppercase text-stone-400 mb-16">Collection 01</h2>
     <div class="grid grid-cols-1 md:grid-cols-3 gap-16">
 
       <!-- Graphic Tee: Foundation -->
