--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <section id="collection" class="py-40 px-8 max-w-7xl mx-auto">
     <h2 class="text-sm tracking-[0.4em] uppercase text-stone-400 mb-6">Collection 01</h2>
 
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-16">
+    <div class="grid grid-cols-3 gap-16">
       <div class="group">
         <div class="h-[420px] bg-black mb-6 flex items-center justify-center">
           <img src="https://i.imgur.com/UqjFMfN.jpeg" alt="ROIS Foundation Tee" class="w-full h-full object-contain" />
@@ -63,8 +63,6 @@
         <p class="text-xs text-stone-500 mt-2">Sunflower yellow embroidery</p>
       </div>
     </div>
-      <div class="h-[420px] bg-black"></div>
-      <div class="h-[420px] bg-black"></div>
     </div>
         <p class="text-sm tracking-wide">Foundation Tee</p>
         <p class="text-xs text-stone-500 mt-2">Left chest print · white ink</p>
@@ -96,7 +94,7 @@
   <!-- Lookbook -->
   <section id="lookbook" class="py-40 bg-stone-950 px-8">
     <h2 class="text-center text-sm tracking-[0.4em] uppercase text-stone-400 mb-20">Lookbook</h2>
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-20 max-w-7xl mx-auto">
+    <div class="grid grid-cols-2 gap-20 max-w-7xl mx-auto">
       <div class="w-full h-[700px] bg-black flex items-center justify-center">
         <img src="https://i.imgur.com/2UBf1pS.jpg" alt="ROIS lookbook model beanie" class="w-full h-full object-contain block" />
       </div>
