--- a/index.html
+++ b/index.html
@@ -38,8 +38,13 @@
   <section id="collection" class="py-28 md:py-40 px-6 md:px-8 max-w-7xl mx-auto">
     <h2 class="text-sm tracking-[0.4em] uppercase text-stone-400 mb-12">Collection 01</h2>
 
-    <!-- Tees & Beanies -->
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-12 md:gap-16 mb-32">
+    <!-- Tees (Collapsible on Mobile) -->
+    <div class="md:hidden mb-6">
+      <button onclick="document.getElementById('tees').classList.toggle('hidden')" class="w-full flex justify-between items-center text-xs tracking-[0.4em] uppercase text-stone-400">
+        Tees <span>+</span>
+      </button>
+    </div>
+    <div id="tees" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-12 md:gap-16 mb-32 md:block hidden">
 
       <!-- Foundation Tee -->
       <div class="group">
@@ -48,6 +53,14 @@
         </div>
         <p class="text-sm tracking-wide">Foundation//000 Tee</p>
         <p class="text-xs text-stone-500 mt-2">Left chest print · white ink</p>
+        <div class="flex gap-2 mt-3 items-center">
+          <span class="w-3 h-3 rounded-full bg-stone-300" title="Stone"></span>
+          <span class="w-3 h-3 rounded-full bg-olive-700" title="Olive"></span>
+          <span class="w-3 h-3 rounded-full bg-slate-700" title="Navy"></span>
+          <span class="relative w-3 h-3 rounded-full bg-amber-900" title="Brown">
+            <span class="absolute -top-4 -left-2 text-[8px] tracking-widest text-red-600">LIMITED</span>
+          </span>
+        </div>
       </div>
 
       <!-- Void//001 Tee -->
@@ -57,7 +70,47 @@
         </div>
         <p class="text-sm tracking-wide">Void//001 Tee</p>
         <p class="text-xs text-stone-500 mt-2">Back graphic · red accent</p>
+        <div class="flex gap-2 mt-3">
+          <span class="w-3 h-3 rounded-full bg-black"></span>
+          <span class="w-3 h-3 rounded-full bg-white border border-stone-400"></span>
+          <span class="w-3 h-3 rounded-full bg-slate-700"></span>
+          <span class="w-3 h-3 rounded-full bg-olive-700"></span>
+        </div>
       </div>
+
+    </div>
+
+    <!-- Shorts (Collapsible on Mobile) -->
+    <div class="md:hidden mb-6">
+      <button onclick="document.getElementById('shorts').classList.toggle('hidden')" class="w-full flex justify-between items-center text-xs tracking-[0.4em] uppercase text-stone-400">
+        Shorts <span>+</span>
+      </button>
+    </div>
+    <div id="shorts" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-12 md:gap-16 mb-32 md:block hidden">
+
+      <!-- Shorts Placeholder -->
+      <div class="group">
+        <div class="relative h-[420px] bg-black mb-6 flex items-center justify-center overflow-hidden">
+          <span class="text-xs tracking-widest text-stone-500">Coming Soon</span>
+        </div>
+        <p class="text-sm tracking-wide">Utility Short//010</p>
+        <p class="text-xs text-stone-500 mt-2">Relaxed fit · heavy cotton</p>
+        <div class="flex gap-2 mt-3">
+          <span class="w-3 h-3 rounded-full bg-black" title="Black"></span>
+          <span class="w-3 h-3 rounded-full bg-amber-200" title="Tan"></span>
+          <span class="w-3 h-3 rounded-full bg-olive-700" title="Olive"></span>
+        </div>
+      </div>
+
+    </div>
+
+    <!-- Beanies (Collapsible on Mobile) -->
+    <div class="md:hidden mb-6">
+      <button onclick="document.getElementById('beanies').classList.toggle('hidden')" class="w-full flex justify-between items-center text-xs tracking-[0.4em] uppercase text-stone-400">
+        Beanies <span>+</span>
+      </button>
+    </div>
+    <div id="beanies" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-12 md:gap-16 mb-32 md:block hidden">
 
       <!-- Raw//002 Beanie -->
       <div class="group">
@@ -66,13 +119,26 @@
         </div>
         <p class="text-sm tracking-wide">Raw//002 Beanie</p>
         <p class="text-xs text-stone-500 mt-2">Sunflower yellow embroidery</p>
+        <div class="flex gap-2 mt-3">
+          <span class="w-3 h-3 rounded-full bg-black"></span>
+          <span class="w-3 h-3 rounded-full bg-white border border-stone-400"></span>
+          <span class="w-3 h-3 rounded-full bg-slate-700"></span>
+          <span class="w-3 h-3 rounded-full bg-olive-700"></span>
+        </div>
       </div>
 
     </div>
 
     <!-- Hoodies -->
-    <h3 class="text-xs tracking-[0.4em] uppercase text-stone-500 mb-10">Hoodies</h3>
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-12 md:gap-16">
+
+    <!-- Hoodies (Collapsible on Mobile) -->
+    <div class="md:hidden mb-6">
+      <button onclick="document.getElementById('hoodies').classList.toggle('hidden')" class="w-full flex justify-between items-center text-xs tracking-[0.4em] uppercase text-stone-400">
+        Hoodies <span>+</span>
+      </button>
+    </div>
+    <h3 class="hidden md:block text-xs tracking-[0.4em] uppercase text-stone-500 mb-10">Hoodies</h3>
+    <div id="hoodies" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-12 md:gap-16 md:block hidden">
 
       <!-- Hoodie 01 -->
       <div class="group">
