Update section headings for clothing categories

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
   <section id="collection" class="py-28 md:py-40 px-6 md:px-8 max-w-7xl mx-auto">
     <h2 class="text-sm tracking-[0.4em] uppercase text-stone-400 mb-12">Collection 01</h2>
 
+    <!-- Tees -->
+    <h3 class="hidden md:block text-xs tracking-[0.4em] uppercase text-stone-500 mb-10">Tees</h3>
+
     <!-- Tees (Collapsible on Mobile) -->
     <div class="md:hidden mb-6">
       <button onclick="document.getElementById('tees').classList.toggle('hidden')" class="w-full flex justify-between items-center text-xs tracking-[0.4em] uppercase text-stone-400">
@@ -80,10 +83,13 @@
 
     </div>
 
+    <!-- Shorts -->
+    <h3 class="hidden md:block text-xs tracking-[0.4em] uppercase text-stone-500 mb-10">Bottoms</h3>
+
     <!-- Shorts (Collapsible on Mobile) -->
     <div class="md:hidden mb-6">
       <button onclick="document.getElementById('shorts').classList.toggle('hidden')" class="w-full flex justify-between items-center text-xs tracking-[0.4em] uppercase text-stone-400">
-        Shorts <span>+</span>
+        Bottoms <span>+</span>
       </button>
     </div>
     <div id="shorts" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-12 md:gap-16 mb-32 md:block hidden">
@@ -104,10 +110,13 @@
 
     </div>
 
+    <!-- Beanies -->
+    <h3 class="hidden md:block text-xs tracking-[0.4em] uppercase text-stone-500 mb-10">Headwear</h3>
+
     <!-- Beanies (Collapsible on Mobile) -->
     <div class="md:hidden mb-6">
       <button onclick="document.getElementById('beanies').classList.toggle('hidden')" class="w-full flex justify-between items-center text-xs tracking-[0.4em] uppercase text-stone-400">
-        Beanies <span>+</span>
+        Headwear <span>+</span>
       </button>
     </div>
     <div id="beanies" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-12 md:gap-16 mb-32 md:block hidden">
