--- a/index.html
+++ b/index.html
@@ -198,10 +198,8 @@
   <footer class="py-16 md:py-20 border-t border-stone-800 text-center">
     <p class="text-sm tracking-widest">ROIS</p>
     <p class="text-xs text-stone-500 mt-4">© 2026 ROIS. All rights reserved.</p>
-    <div class="flex justify-center gap-10 mt-8 text-xs tracking-widest uppercase">
-      <a href="#" class="hover:text-red-600 transition">Instagram</a>
-      <a href="#" class="hover:text-red-600 transition">Contact</a>
-    </div>
+    <div class="flex justify-center gap-10 mt-8 text-xs tracking-widest uppercase">$1</div>
+    <p class="mt-6 text-xs text-stone-500">shoprois@outlook.com</p>
   </footer>
 
 
