Update product display layout and remove size options
Replaced old product display with a new layout featuring an updated image and removed size buttons.

--- a/index.html
+++ b/index.html
@@ -216,14 +216,17 @@
           <span class="absolute top-4 left-4 text-[10px] tracking-widest border border-red-600 text-red-600 px-3 py-1">NEW</span>
           <img src="https://i.imgur.com/njXK0t2.jpeg" alt="ROIS Foundation University Hoodie</p>
         <p class="text-xs mt-1">$1
-        <div class="flex gap-2 mt-3">
-  <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">S</button>
-  <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">M</button>
-  <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">L</button>
-  <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">XL</button>
-  <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">2X</button>
-  <button class="w-8 h-8 rounded-full border border-red-600 text-red-600 text-[10px] tracking-widest hover:bg-red-600 hover:text-black transition">3X</button>
+        <div class="relative h-[520px] bg-black mb-6 flex items-center justify-center overflow-hidden">
+  <span class="absolute top-4 left-4 text-[10px] tracking-widest border border-red-600 text-red-600 px-3 py-1">
+    NEW
+  </span>
+  <img
+    src="https://i.imgur.com/njXK0t2.jpeg"
+    alt="ROIS Foundation University Hoodie"
+    class="max-w-full max-h-full object-contain"
+  />
 </div>
+
         <p class="text-xs text-stone-500 mt-2">Stone · Olive · Navy</p>
         <div class="flex gap-2 mt-3">
           <span class="w-3 h-3 rounded-full bg-stone-300"></span>
